Pallet contract relative modifications

--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -92,7 +92,8 @@ runtime-benchmarks = [
   "pallet-utility/runtime-benchmarks",
   "pallet-collator-selection/runtime-benchmarks",
   "pallet-membership/runtime-benchmarks",
-  "pallet-contracts/runtime-benchmarks",
+  "pallet-contracts-primitives/std",
+  "pallet-contracts/std",
   "pallet-xcm/runtime-benchmarks",
   "xcm/runtime-benchmarks",
   "xcm-builder/runtime-benchmarks",
