--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,7 +128,9 @@ jobs:
             }' | jq '{"result"}[]' >> $GITHUB_OUTPUT
           cat $GITHUB_OUTPUT
         id: get_version
-
+      - name: Install protobuf-compiler
+        run: |
+         sudo apt-get install protobuf-compiler
       - name: Install Rust nightly
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
