--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -92,8 +92,7 @@ runtime-benchmarks = [
   "pallet-utility/runtime-benchmarks",
   "pallet-collator-selection/runtime-benchmarks",
   "pallet-membership/runtime-benchmarks",
-  "pallet-contracts-primitives/std",
-  "pallet-contracts/std",
+  "pallet-contracts/runtime-benchmarks",
   "pallet-xcm/runtime-benchmarks",
   "xcm/runtime-benchmarks",
   "xcm-builder/runtime-benchmarks",
@@ -183,6 +182,7 @@ pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate",
 
 polkadot-parachain = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.37" }
 polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.37" }
+polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37" }
 xcm = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.37" }
 xcm-builder = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.37" }
 xcm-executor = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.37" }
