Install protoc in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,9 @@ jobs:
         with:
           toolchain: ${{ env.nightly }}
           target: ${{ env.target }}
-
+      - name: Install protobuf-compiler
+        run: |
+         sudo apt-get install protobuf-compiler
       - name: Cache cargo registry
         uses: actions/cache@v3
         with:
@@ -100,7 +102,9 @@ jobs:
         with:
           toolchain: ${{ env.nightly }}
           target: ${{ env.target }}  
-
+      - name: Install protobuf-compiler
+        run: |
+         sudo apt-get install protobuf-compiler
       - name: Run cargo-tarpaulin
         uses: actions-rs/tarpaulin@v0.1
         with:
