build: update client's service

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -44,7 +44,7 @@ try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "p
 
 pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
 
-substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
+frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
 substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
 
 ## Substrate Client Dependencies
