build(try-runtime): fix

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -20,7 +20,10 @@ runtime-benchmarks = [
 	"runtime-eden/runtime-benchmarks",
 	"polkadot-cli/runtime-benchmarks",
 ]
-try-runtime = ["runtime-eden/try-runtime"]
+try-runtime = [
+	"runtime-eden/try-runtime",
+	"try-runtime-cli/try-runtime"
+]
 
 [dependencies]
 clap = { version = "4.0.32", features = ["derive"] }
