ci: use wasm target for clippy as well

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           toolchain: ${{ env.nightly }}
           components: rustfmt, clippy
+          target: ${{ env.target }}
       - name: Rustfmt Check
         uses: actions-rust-lang/rustfmt@v1
       - name: Install protobuf-compiler
