--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -147,11 +147,11 @@ jobs:
         run: |
             install -d snapshots
             date > snapshots/created_at
-            cargo run --release --bin nodle-parachain --features=try-runtime try-runtime --execution native --chain ${{ env.try-runtime-chain }} --no-spec-name-check  on-runtime-upgrade  live --snapshot-path="snapshots/paradis-snapshot-full" -u ${{ env.try-runtime-uri}}
+            cargo run --release --bin nodle-parachain --features=try-runtime try-runtime --runtime existing --chain ${{ env.try-runtime-chain }} on-runtime-upgrade live --snapshot-path="snapshots/paradis-snapshot-full" -u ${{ env.try-runtime-uri}}
       - name: Try runtime reuse snap
         if: steps.cachedir.outputs.cache-hit == 'true'
         run: |
             cat snapshots/created_at
-            cargo run --release --bin nodle-parachain --features=try-runtime try-runtime --execution native --chain ${{ env.try-runtime-chain }} --no-spec-name-check  on-runtime-upgrade  snap --snapshot-path="snapshots/paradis-snapshot-full"
+            cargo run --release --bin nodle-parachain --features=try-runtime try-runtime --runtime existing --chain ${{ env.try-runtime-chain }} on-runtime-upgrade snap --snapshot-path="snapshots/paradis-snapshot-full"
 
 
