ci(try-runtime): fix the create-snapshot command

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -147,7 +147,7 @@ jobs:
         run: |
             install -d snapshots
             date > snapshots/created_at
-            cargo run --release --bin nodle-parachain --features=try-runtime try-runtime --runtime existing --chain ${{ env.try-runtime-chain }} on-runtime-upgrade live --snapshot-path="snapshots/paradis-snapshot-full" -u ${{ env.try-runtime-uri}}
+            cargo run --release --bin nodle-parachain --features=try-runtime try-runtime --runtime existing --chain ${{ env.try-runtime-chain }} on-runtime-upgrade create-snapshot "snapshots/paradis-snapshot-full" -u ${{ env.try-runtime-uri}}
       - name: Try runtime reuse snap
         if: steps.cachedir.outputs.cache-hit == 'true'
         run: |
