--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -141,17 +141,22 @@ jobs:
         with:
           path: snapshots
           key: ${{steps.get_version.outputs.eden_rev}}
-
-      - name: Try runtime update snap
+      - name: Cargo build
+        run: cargo build --release --features=try-runtime --bin nodle-parachain
+      - name: Fetch snapshot
         if: steps.cachedir.outputs.cache-hit != 'true'
+        OnError: continue
         run: |
             install -d snapshots
             date > snapshots/created_at
-            cargo run --release --bin nodle-parachain --features=try-runtime try-runtime --runtime existing --chain ${{ env.try-runtime-chain }} create-snapshot "snapshots/paradis-snapshot-full" -u ${{ env.try-runtime-uri}}
+            ./target/release/nodle-parachain try-runtime --runtime existing -lruntime=debug --chain ${{ env.try-runtime-chain }} create-snapshot "snapshots/paradis-snapshot-full" -u ${{ env.try-runtime-uri}}
+      - name: Run Migration on new snapshot
+        if: steps.cachedir.outputs.cache-hit != 'true'
+            ./target/release/nodle-parachain try-runtime --runtime target/release/wbuild/runtime-eden/runtime_eden.wasm -lruntime=debug --chain ${{ env.try-runtime-chain }} on-runtime-upgrade snap -s snapshots/paradis-snapshot-full
       - name: Try runtime reuse snap
         if: steps.cachedir.outputs.cache-hit == 'true'
         run: |
             cat snapshots/created_at
-            cargo run --release --bin nodle-parachain --features=try-runtime try-runtime --runtime existing --chain ${{ env.try-runtime-chain }} on-runtime-upgrade snap --snapshot-path="snapshots/paradis-snapshot-full"
+            ./target/release/nodle-parachain try-runtime --runtime target/release/wbuild/runtime-eden/runtime_eden.wasm --chain ${{ env.try-runtime-chain }} on-runtime-upgrade snap --snapshot-path="snapshots/paradis-snapshot-full"
 
-
+./target/release/nodle-parachain try-runtime --runtime target/release/wbuild/runtime-eden/runtime_eden.wasm  -lruntime=debug --chain dev  on-runtime-upgrade snap -s snapshots/paradis-snapshot-full
