--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -38,15 +38,13 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Login to GHCR
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Login to DockerHub
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v2 
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -55,6 +53,8 @@ jobs:
         with:
           context: .
           file: './Dockerfile'
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
+          push: true
+          tags: |
+            nodlecode/chain:dalek-zebra-rc2
+            ghcr.io/nodlecode/chain:dalek-zebra-rc2
           labels: ${{ steps.meta.outputs.labels }}
