--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -136,6 +136,7 @@ try-runtime = [
   "cumulus-pallet-xcmp-queue/try-runtime",
   "pallet-xcm/try-runtime",
   "parachain-info/try-runtime",
+  "orml-xtokens/try-runtime",
 ]
 
 [dependencies]
