xtokens: added runtime benchmark in toml

--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -46,6 +46,7 @@ std = [
   "xcm-builder/std",
   "xcm-executor/std",
   "orml-xtokens/std",
+  "orml-xtokens/std",
   "cumulus-pallet-aura-ext/std",
   "cumulus-pallet-dmp-queue/std",
   "cumulus-pallet-parachain-system/std",
@@ -98,6 +99,7 @@ runtime-benchmarks = [
   "xcm/runtime-benchmarks",
   "xcm-builder/runtime-benchmarks",
   "xcm-executor/runtime-benchmarks",
+  "orml-xtokens/runtime-benchmarks",
   "cumulus-pallet-xcmp-queue/runtime-benchmarks",
   "sp-runtime/runtime-benchmarks",
 ]
