add orlm-traits in std

--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -46,7 +46,7 @@ std = [
   "xcm-builder/std",
   "xcm-executor/std",
   "orml-xtokens/std",
-  "orml-xtokens/std",
+  "orml-traits/std",
   "cumulus-pallet-aura-ext/std",
   "cumulus-pallet-dmp-queue/std",
   "cumulus-pallet-parachain-system/std",
