xcm: add pallet benchmarks for fungible

--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -74,6 +74,7 @@ std = [
   "sp-transaction-pool/std",
   "sp-version/std",
   "sp-npos-elections/std",
+  "pallet-xcm-benchmarks/std",
 ]
 runtime-benchmarks = [
   "frame-benchmarking/runtime-benchmarks",
