--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,7 +89,7 @@ jobs:
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@cargo-llvm-cov
       - name: Test and gather coverage
-        run: cargo llvm-cov --lcov --output-path lcov.info --all-features --workspace --timeout 120 --exclude runtimes-eden nodle-parachain --exclude-files **/mock.rs **/weights.rs **/migrations.rs"
+        run: cargo llvm-cov --lcov --output-path lcov.info --all-features --workspace --exclude runtimes-eden --exclude nodle-parachain  
       - name: Upload to Codecov
         uses: codecov/codecov-action@v3.0.0
         with:
