--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,7 +89,7 @@ jobs:
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@cargo-llvm-cov
       - name: Test and gather coverage
-        run: cargo llvm-cov --lcov --output-path lcov.info --all-features --workspace 
+        run: cargo llvm-cov --lcov --output-path lcov.info --all-features --workspace --exclude nodle-parachain  --benches
       - name: Upload to Codecov
         uses: codecov/codecov-action@v3.0.0
         with:
