--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,34 +9,38 @@
     },
     "containerUser": "vscode",
     // Set *default* container specific settings.json values on container create.
-    "settings": {
-        "lldb.executable": "/usr/bin/lldb",
-        // VS Code don't watch files under ./target
-        "files.watcherExclude": {
-            "**/target/**": true
-        },
-        "rust-analyzer.checkOnSave.command": "clippy",
-        "rust-analyzer.checkOnSave.features": "all",
-        "rust-analyzer.checkOnSave.extraArgs": [
-            "--",
-            "-A",
-            "clippy::type_complexity",
-            "-A",
-            "clippy::identity_op",
-            "-A",
-            "clippy::boxed_local",
-            "-D",
-            "dead_code"
-        ]
-    },
-    // Add the IDs of extensions you want installed when the container is created.
-    "extensions": [
-        "vadimcn.vscode-lldb",
-        "serayuzgur.crates",
-        "ms-azuretools.vscode-docker",
-        "tamasfe.even-better-toml",
-        "GitHub.copilot",
-        "eamodio.gitlens",
-        "rust-lang.rust-analyzer"
-    ]
+    "customizations": {
+        "codespaces": {
+            "settings": {
+                "lldb.executable": "/usr/bin/lldb",
+                // VS Code don't watch files under ./target
+                "files.watcherExclude": {
+                    "**/target/**": true
+                },
+                "rust-analyzer.checkOnSave.command": "clippy",
+                "rust-analyzer.checkOnSave.features": "all",
+                "rust-analyzer.checkOnSave.extraArgs": [
+                    "--",
+                    "-A",
+                    "clippy::type_complexity",
+                    "-A",
+                    "clippy::identity_op",
+                    "-A",
+                    "clippy::boxed_local",
+                    "-D",
+                    "dead_code"
+                ]
+            },
+            // Add the IDs of extensions you want installed when the container is created.
+            "extensions": [
+                "vadimcn.vscode-lldb",
+                "serayuzgur.crates",
+                "ms-azuretools.vscode-docker",
+                "tamasfe.even-better-toml",
+                "GitHub.copilot",
+                "eamodio.gitlens",
+                "rust-lang.rust-analyzer"
+            ]
+        }
+    }
 }
