--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,7 @@
     "containerUser": "vscode",
     // Set *default* container specific settings.json values on container create.
     "customizations": {
-        "codespaces": {
+        "vscode": {
             "settings": {
                 "lldb.executable": "/usr/bin/lldb",
                 // VS Code don't watch files under ./target
@@ -35,10 +35,6 @@
             "extensions": [
                 "vadimcn.vscode-lldb",
                 "serayuzgur.crates",
-                "ms-azuretools.vscode-docker",
-                "tamasfe.even-better-toml",
-                "GitHub.copilot",
-                "eamodio.gitlens",
                 "rust-lang.rust-analyzer"
             ]
         }
