prebuild test compilation

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,10 @@
         "docker-from-docker": "latest"
     },
     "containerUser": "vscode",
+    // This run during prebuild and allows the user to start with a container
+    // containing the latest compiled dependencies and save on the first compilation
+    // cycle which is usually absurdly slow.
+    "updateContentCommand": "cargo test --all --no-run",
     // Set *default* container specific settings.json values on container create.
     "customizations": {
         "vscode": {
