configure sane host defaults

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,6 +12,15 @@
     // containing the latest compiled dependencies and save on the first compilation
     // cycle which is usually absurdly slow.
     "updateContentCommand": "cargo test --all --no-run",
+    // Ensure every codespace have the minimum resources to comfortably support the
+    // project.
+    "hostRequirements": {
+        "cpus": 4,
+        "memory": "8gb",
+        // The compiled dependencies take quite a bit of space and the default is
+        // usually not enough.
+        "storage": "50gb"
+    },
     // Set *default* container specific settings.json values on container create.
     "customizations": {
         "vscode": {
