temp: modify docker action to generate docker image

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -45,7 +45,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Login to DockerHub
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@v2 
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -56,5 +55,7 @@ jobs:
           context: .
           file: './Dockerfile'
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: |
+            nodlecode/chain:XCM-TEST
+            ghcr.io/nodlecode/chain:XCM-TEST
           labels: ${{ steps.meta.outputs.labels }}
