only run build, not tests

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
     // This run during prebuild and allows the user to start with a container
     // containing the latest compiled dependencies and save on the first compilation
     // cycle which is usually absurdly slow.
-    "updateContentCommand": "cargo test --all --no-run",
+    "updateContentCommand": "cargo build",
     // Ensure every codespace have the minimum resources to comfortably support the
     // project.
     "hostRequirements": {
