use prebuilt devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,9 @@
 {
     "build": {
         "dockerfile": "Dockerfile",
-        "context": ".."
+        "context": "..",
+        // Prebuilt in CI/CD
+        "cacheFrom": "ghcr.io/nodlecode/devcontainer-chain"
     },
     "features": {
         "github-cli": "latest",
