sequentialize CI steps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,7 @@ jobs:
 
   tests:
     runs-on: ubuntu-latest-8-cores
+    needs: lints
 
     steps:
       - uses: actions/checkout@v3
@@ -77,6 +78,8 @@ jobs:
 
   linecoverage:
     runs-on: ubuntu-latest-4-cores
+    needs: tests
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions-rust-lang/setup-rust-toolchain@v1
@@ -99,6 +102,8 @@ jobs:
   try-runtime:
     runs-on: ubuntu-latest-8-cores
     timeout-minutes: 50
+    needs: tests
+
     steps:
       - uses: actions/checkout@v3
       - name: Check Version
