fix: several benchmark and xcm config issues [WIP]

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -86,16 +86,16 @@ sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polk
 sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
 
 # Cumulus dependencies
-cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", tag = "v0.9.400" }
-cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", tag = "v0.9.400" }
-cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", tag = "v0.9.400" }
-cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", tag = "v0.9.400" }
-cumulus-client-service = { git = "https://github.com/paritytech/cumulus", tag = "v0.9.400" }
-cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", tag = "v0.9.400" }
-cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", tag = "v0.9.400" }
-cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", tag = "v0.9.400" }
-cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", tag = "v0.9.400" }
-cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/cumulus", tag = "v0.9.400" }
+cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.40" }
+cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.40" }
+cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.40" }
+cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.40" }
+cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.40" }
+cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.40" }
+cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.40" }
+cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.40" }
+cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.40" }
+cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.40" }
 
 # Polkadot dependencies
 polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
