--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -24,6 +24,7 @@ std = [
   "pallet-mandate/std",
   "pallet-membership/std",
   "pallet-multisig/std",
+  "pallet-nodle-uniques/std",
   "pallet-offences/std",
   "pallet-insecure-randomness-collective-flip/std",
   "pallet-reserve/std",
@@ -118,6 +119,7 @@ try-runtime = [
   "pallet-mandate/try-runtime",
   "pallet-membership/try-runtime",
   "pallet-multisig/try-runtime",
+  "pallet-nodle-uniques/try-runtime",
   "pallet-offences/try-runtime",
   "pallet-insecure-randomness-collective-flip/try-runtime",
   "pallet-reserve/try-runtime",
@@ -222,6 +224,7 @@ pallet-allocations = { default-features = false, path = "../../pallets/allocatio
 pallet-reserve = { default-features = false, path = "../../pallets/reserve" }
 pallet-grants = { default-features = false, path = "../../pallets/grants" }
 pallet-mandate = { default-features = false, path = "../../pallets/mandate" }
+pallet-nodle-uniques = { default-features = false, path = "../../pallets/uniques" }
 orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.40", default-features = false }
 orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.40", default-features = false }
 [build-dependencies]
