--- a/.github/workflows/srtool.yml
+++ b/.github/workflows/srtool.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - dev/sr-tool
 
 jobs:
   srtool:
@@ -17,7 +18,7 @@ jobs:
 
       - name: Srtool build
         id: srtool_build
-        uses: chevdor/srtool-actions@v0.6.0
+        uses: chevdor/srtool-actions@v0.7.0
         with:
           chain: ${{ matrix.runtime }}
           package: runtime-${{ matrix.runtime }}
