Use frozen version of SRtool

--- a/.github/workflows/srtool.yml
+++ b/.github/workflows/srtool.yml
@@ -3,7 +3,7 @@ name: Srtool
 on:
   push:
     branches:
-      - (fix)-CI-srtool
+      - master
 
 jobs:
   srtool:
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - run: rustup show
+
       - name: Srtool build
         id: srtool_build
         uses: chevdor/srtool-actions@v0.6.0
