--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
 
 env:
-  nightly: nightly-2023-03-08
+  toolchain: stable
   target: wasm32-unknown-unknown
   try-runtime-chain: dev
   try-runtime-uri: wss://eden-rpc.dwellir.com:443
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          toolchain: ${{ env.nightly }}
+          toolchain: ${{ env.toolchain }}
           components: rustfmt, clippy
           target: ${{ env.target }}
       - name: Rustfmt Check
@@ -31,7 +31,7 @@ jobs:
         uses: actions-rs-plus/clippy-check@v2
         with:
           args: --all-features -- -A clippy::type_complexity -A clippy::identity_op -A clippy::boxed_local -D dead_code
-          toolchain: ${{ env.nightly }}
+          toolchain: ${{ env.toolchain }}
 
   tests:
     runs-on: ubuntu-latest-8-cores
@@ -40,7 +40,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          toolchain: ${{ env.nightly }}
+          toolchain: ${{ env.toolchain }}
           target: ${{ env.target }}
       - name: Install protobuf-compiler
         run: |
@@ -82,7 +82,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          toolchain: ${{ env.nightly }}
+          toolchain: ${{ env.toolchain }}
           target: ${{ env.target }}  
       - name: Install protobuf-compiler
         run: |
@@ -117,10 +117,10 @@ jobs:
       - name: Install protobuf-compiler
         run: |
          sudo apt-get install protobuf-compiler
-      - name: Install Rust nightly
+      - name: Install Rust toolchain
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          toolchain: ${{ env.nightly }}
+          toolchain: ${{ env.toolchain }}
           target: ${{ env.target }}
       - name: Cache a dir
         uses: actions/cache@v3
