Use sha as prerelease for owrl

--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -222,7 +222,7 @@ pallet-allocations = { default-features = false, path = "../../pallets/allocatio
 pallet-reserve = { default-features = false, path = "../../pallets/reserve" }
 pallet-grants = { default-features = false, path = "../../pallets/grants" }
 pallet-mandate = { default-features = false, path = "../../pallets/mandate" }
-orml-xtokens = { git = "https://github.com/UniqueNetwork/open-runtime-module-library", branch = "feature/update-polkadot-v0.9.42", default-features = false }
-orml-traits = { git = "https://github.com/UniqueNetwork/open-runtime-module-library", branch = "feature/update-polkadot-v0.9.42", default-features = false }
+orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "4ae0372e2c624e6acc98305564b9d395f70814c0", default-features = false }
+orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "4ae0372e2c624e6acc98305564b9d395f70814c0", default-features = false }
 [build-dependencies]
 substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
