add pallet to runtime

--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -40,6 +40,7 @@ std = [
   "pallet-contracts-primitives/std",
   "pallet-contracts/std",
   "pallet-xcm/std",
+  "pallet-missions-registry/std",
   "polkadot-parachain/std",
   "polkadot-runtime-common/std",
   "xcm/std",
@@ -97,6 +98,7 @@ runtime-benchmarks = [
   "pallet-membership/runtime-benchmarks",
   "pallet-contracts/runtime-benchmarks",
   "pallet-xcm/runtime-benchmarks",
+  "pallet-missions-registry/runtime-benchmarks",
   "xcm-builder/runtime-benchmarks",
   "xcm-executor/runtime-benchmarks",
   "pallet-xcm-benchmarks/runtime-benchmarks",
@@ -131,6 +133,7 @@ try-runtime = [
   "pallet-aura/try-runtime",
   "pallet-collator-selection/try-runtime",
   "pallet-contracts/try-runtime",
+  "pallet-missions-registry/try-runtime",
   "cumulus-pallet-aura-ext/try-runtime",
   "cumulus-pallet-dmp-queue/try-runtime",
   "cumulus-pallet-parachain-system/try-runtime",
@@ -177,6 +180,7 @@ pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/parityt
 pallet-uniques = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.40" }
 pallet-utility = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.40" }
 pallet-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.40" }
+pallet-missions-registry = { path = "../../pallets/missions-registry", default-features = false }
 
 cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.40", default-features = false }
 pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.40" }
@@ -224,5 +228,6 @@ pallet-grants = { default-features = false, path = "../../pallets/grants" }
 pallet-mandate = { default-features = false, path = "../../pallets/mandate" }
 orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.40", default-features = false }
 orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.40", default-features = false }
+
 [build-dependencies]
 substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
