--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
 
 env:
-  nightly: nightly-2023-03-08
+  nightly: stable
   target: wasm32-unknown-unknown
   try-runtime-chain: dev
   try-runtime-uri: wss://eden-rpc.dwellir.com:443
