Try runtime url and chachname

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,8 @@ on:
 env:
   stable: stable
   target: wasm32-unknown-unknown
-  try-runtime-chain: dev
-  try-runtime-uri: wss://eden-rpc.dwellir.com:443
+  try-runtime-chain: eden
+  try-runtime-uri: wss://eden-rpc.dwellir.com:443/ws
 
 jobs:
   lints:
