Use new name for artefact

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,7 +109,7 @@ jobs:
               "method": "system_version",    
               "params": [],
               "id": 1
-            }' | jq '{"result"}[]' >> $GITHUB_OUTPUT
+            }' | jq '{"result"}[]'| sed 's/^"/"eden-/' >> $GITHUB_OUTPUT
           cat $GITHUB_OUTPUT
         id: get_version
       - name: Install protobuf-compiler
