pallet-uniques: add benchmarks

--- a/pallets/uniques/Cargo.toml
+++ b/pallets/uniques/Cargo.toml
@@ -11,6 +11,7 @@ std = [
   "serde",
   "scale-info/std",
   "frame-support/std",
+  "frame-benchmarking?/std",
   "frame-system/std",
   "sp-io/std",
   "sp-runtime/std",
@@ -21,6 +22,11 @@ std = [
 try-runtime = [
   "frame-support/try-runtime",
   "pallet-uniques/try-runtime"
+]
+runtime-benchmarks = [
+	"frame-benchmarking/runtime-benchmarks",
+	"frame-system/runtime-benchmarks",
+	"sp-runtime/runtime-benchmarks",
 ]
 
 [dependencies]
@@ -37,6 +43,6 @@ sp-io = { git = "https://github.com/paritytech/substrate", default-features = fa
 sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.40" }
 sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.40" }
 pallet-uniques = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.40" }
-
+support = { path = "../../support" }
 [dev-dependencies]
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.40" }
