pallet-uniques: Add nodle uniques to list benchmarks

--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -93,6 +93,7 @@ runtime-benchmarks = [
   "pallet-preimage/runtime-benchmarks",
   "pallet-timestamp/runtime-benchmarks",
   "pallet-uniques/runtime-benchmarks",
+  "pallet-nodle-uniques/runtime-benchmarks",
   "pallet-utility/runtime-benchmarks",
   "pallet-collator-selection/runtime-benchmarks",
   "pallet-membership/runtime-benchmarks",
