migration(pallet-uniques): adding backbone for storage migration

--- a/launch.json
+++ b/launch.json
@@ -14,7 +14,7 @@
                 "port": 30555
             },
             {
-                "name": "charlie",
+                "name": "charle",
                 "wsPort": 9966,
                 "port": 30666
             },
