fix(pallet-reserve): run benchmark tests in the test mode

--- a/pallets/uniques/Cargo.toml
+++ b/pallets/uniques/Cargo.toml
@@ -11,7 +11,7 @@ std = [
   "serde",
   "scale-info/std",
   "frame-support/std",
-  "frame-benchmarking?/std",
+  "frame-benchmarking/std",
   "frame-system/std",
   "sp-io/std",
   "sp-runtime/std",
