Revert "migration(pallet-uniques): adding backbone for storage migration"
This reverts commit 2f53134b8391fe09a352c68fc47f65d2c7bcf81d.

--- a/launch.json
+++ b/launch.json
@@ -14,7 +14,7 @@
                 "port": 30555
             },
             {
-                "name": "charle",
+                "name": "charlie",
                 "wsPort": 9966,
                 "port": 30666
             },
