--- a/pallets/uniques/Cargo.toml
+++ b/pallets/uniques/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "pallet-nodle-uniques"
 version = "2.1.0"
-authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
+authors = ["Nodle <support@nodle.com>"]
 edition = "2021"
 
 [features]
