Update author in support/Cargo.toml
Co-authored-by: Eliott Teissonniere <10683430+ETeissonniere@users.noreply.github.com>

--- a/support/Cargo.toml
+++ b/support/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-authors = ["Nodle <support@nodle.com>"]
+authors = ["Nodle Developers <eng@nodle.com>"]
 edition = "2021"
 name = "support"
 version = "2.2.2"
