--- a/pallets/sponsorship/Cargo.toml
+++ b/pallets/sponsorship/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 description = "Nodle pallet to allow sponsors to cover fees and reserves needed for a predefined category of calls for their registered users"
 authors = ["Nodle Developers <eng@nodle.com>"]
 edition = "2021"
-license = "MIT-0"
+license = "Apache-2.0"
 publish = false
 
 [package.metadata.docs.rs]
