patch for in memory db

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -103,3 +103,7 @@ polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = 
 polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42" }
 polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42" }
 xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.42" }
+
+# in memory patch
+sp-database = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
+kvdb-rocksdb = { version = "0.18.0" }
