apply sp-trie patch

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ resolver = "1"
 # Substrate runtime requires unwind apparently, and anyways it gives more useful
 # panic messages which can be useful for troubleshooting purposes
 panic = "unwind"
+
+[patch."https://github.com/paritytech/substrate"]
+sp-trie = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
