use sc-consensus-slots patch

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ resolver = "1"
 panic = "unwind"
 
 [patch."https://github.com/paritytech/substrate"]
+sc-consensus = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
 sp-trie = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
